--- a/CleanArch-14-11/WebApplication1/appsettings.json
+++ b/CleanArch-14-11/WebApplication1/appsettings.json
@@ -8,6 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "QLNS": "Server=DESKTOP-MVHRNK4;Database=QLNS;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "QLNS-Linh": "Server=DESKTOP-MVHRNK4;Database=QLNS;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "QLNS-Lap": "Server=DESKTOP-58B737K;Database=qlns;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "QLNS-Hung": "Server=DESKTOP-QDVEDF4;Database=qlns;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
