--- a/CleanArch/WebApplication1/appsettings.json
+++ b/CleanArch/WebApplication1/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "QLNS": "Server=DESKTOP-MVHRNK4;Database=QLNS;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "QLNS": "Server=(localdb)\\mssqllocaldb;Database=QLNS;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
