--- a/CleanArch/Infrastructure/Infrastructure.csproj
+++ b/CleanArch/Infrastructure/Infrastructure.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="Google.Apis.Analytics.v3" Version="1.49.0.1679" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
   </ItemGroup>
 
